--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,20 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1 {
+  font-size:50px;
+  letter-spacing :10px;
+  font-family: monospace;
+  color: rgb(252, 4, 4);
+  margin-bottom: 50px;
+  text-transform: uppercase;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h2{
+  font-size:40px;
+  letter-spacing :10px;
+  font-family: cursive;
+  color: rgb(10, 10, 10);
+  margin-bottom: px;
+  text-transform: capitalize;
 }
